--- a/Project_File/kubernetes-files/deployment_template.yaml
+++ b/Project_File/kubernetes-files/deployment_template.yaml
@@ -15,5 +15,5 @@ spec:
         app: suleymanakturk-anasayfa
     spec:
       containers:
-      - image: ${IMAGE_NAME}
+      - image: suleymanakturk/${IMAGE_NAME}
         name: suleymanakturk-anasayfa
