--- a/Project_File/kubernetes-files/deployment.yaml
+++ b/Project_File/kubernetes-files/deployment.yaml
@@ -15,5 +15,5 @@ spec:
         app: suleymanakturk-anasayfa
     spec:
       containers:
-      - image: testimage
+   image: testimage2
         name: suleymanakturk-anasayfa
