Jenkins Pipeline | image: testimage2

--- a/Project_File/kubernetes-files/deployment.yaml
+++ b/Project_File/kubernetes-files/deployment.yaml
@@ -15,5 +15,5 @@ spec:
         app: suleymanakturk-anasayfa
     spec:
       containers:
-        - image: testimage7
+        - image: '{image}'
           name: suleymanakturk-anasayfa
