Jenkins Pipeline | image: suleymanakturk-anasayfa:v100

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,5 +15,5 @@ spec:
         app: suleymanakturk-anasayfa
     spec:
       containers:
-        - image: 'suleymanakturk-anasayfa:v$BUILD_NUMBER'
-          name: suleymanakturk-anasayfa
+      - image: 
+        name: suleymanakturk-anasayfa
