--- a/Project_File/kubernetes-files/deployment.yaml
+++ b/Project_File/kubernetes-files/deployment.yaml
@@ -15,5 +15,5 @@ spec:
         app: suleymanakturk-anasayfa
     spec:
       containers:
-        - image: 'suleymanakturk-anasayfa:v$BUILD_NUMBER'
+        - image: 'suleymanakturk-anasayfa:v102'
           name: suleymanakturk-anasayfa
